--- a/de/css/dita-ot-doc.css
+++ b/de/css/dita-ot-doc.css
@@ -283,6 +283,15 @@ caption {
 }
 
 /****************************************
+Button
+****************************************/
+.ccb {
+      float: right; 
+      font-size:x-large
+     }
+
+
+/****************************************
 ToolTips and Highlight Link
 ****************************************/
 
