--- a/de/css/dita-ot-doc.css
+++ b/de/css/dita-ot-doc.css
@@ -345,11 +345,17 @@ Navigation
 nav[role=toc] {
   float: left;
   width: 300px;
+  background-image: linear-gradient(90deg, #f8f8f8 0%, #ffffff 50%);
 }
 
 nav[role=toc] li.active > a {
   font-weight: bold;
+  background-color: #e6e6e6;
+  padding: 5px;
+  box-sizing: border-box;
+  border-radius: 3px 3px 3px 3px;	
 }
+
 /* ↑ end-nav-ref ↑ */
 
 nav[role=toc] > ul {
@@ -359,6 +365,9 @@ nav[role=toc] > ul {
 nav[role=toc] > ul > li ul {
   margin-left: 1.2em;
 }
+
+
+
 
 /****************************************
 Index Tiles
