--- a/de/css/dita-ot-doc.css
+++ b/de/css/dita-ot-doc.css
@@ -15,6 +15,7 @@ body {
   background-image:    -moz-linear-gradient(left, #eee 0%, #fff 300px); /* FF3.6+ */
   background-image:         linear-gradient(left, #eee 0%, #fff 300px); /* W3C */
   color: #333;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   margin: 0;
   padding: 0;
   
