--- a/en/css/dita-ot-doc.css
+++ b/en/css/dita-ot-doc.css
@@ -1,8 +1,24 @@
 /* DITA Open Toolkit documentation style */
 
 /****************************************
+Import Prism
+****************************************/
+
+@import url("https://prismjs.com/themes/prism.css");
+
+/* DITA Open Toolkit documentation style */
+
+/****************************************
 Basic fonts and typography
 ****************************************/
+@font-face {
+  font-family: JuniusVF;
+  src: url('https://psb1558.github.io/Junicode-New/webfiles/JuniusVF.woff2');
+  font-weight: 300 700;
+  font-stretch: 60% 100%;
+  font-style: normal;
+}
+
 
 article {
   color: #333;
@@ -36,7 +52,7 @@ td.td2 {
   width: 90%;
   font-size: 18pt; 
   color: rgb(51, 51, 51); 
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: JuniusVF, 'Helvetica Neue', Helvetica, Arial, sans-serif;
   box-shadow: none;
   text-align: left;
 }
@@ -49,7 +65,7 @@ div.header {
 
 div.header p {
   color: #777;
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: JuniusVF, 'Helvetica Neue', Helvetica, Arial, sans-serif;
   line-height: 1.3;
   margin: 0;
 }
@@ -65,7 +81,7 @@ body,
 caption,
 td,
 th {
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: JuniusVF, 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 10pt;
 }
 
@@ -77,7 +93,7 @@ pre,
 .option,
 .parmname {
   color: #777;
-  font-family: Menlo, Monaco, Consolas, 'Courier New', monospace;
+  font-family: JuniusVF, 'Noto Sans Mono','Liberation Mono','Consolas', Menlo, Monaco, Consolas, 'Courier New', monospace;
   font-size: 90%;
 }
 
@@ -101,7 +117,7 @@ h3 {
 h1 .filepath,
 h2 .filepath,
 h3 .filepath {
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: JuniusVF, 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 12pt;
   font-weight: bold;
 }
