--- a/de/css/dita-ot-doc.css
+++ b/de/css/dita-ot-doc.css
@@ -86,7 +86,7 @@ div.header table {
 
 div.header p {
   color: #777;
-  font-family: Bitter,'Noto Serif', Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: Bitter, 'Noto Serif', Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif;
   line-height: 1.3;
   margin: 0;
 }
@@ -98,11 +98,16 @@ div.header hr {
 }
 /* ↑ end-header-ref ↑ */
 
-
 caption,
-td,
-th {
-  font-family: JuniusVF, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+th, td.desc {
+  font-family: 'Bitter', 'Noto Serif','Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-size: 10pt;
+}
+
+
+td
+{
+  font-family: JuniusVF, 'Bitter','Noto Serif','Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 10pt;
 }
 
@@ -114,7 +119,7 @@ pre,
 .option,
 .parmname {
   color: #777;
-  font-family: JuniusVF, 'Noto Sans Mono','Liberation Mono', Menlo, Monaco, Consolas, 'Courier New', monospace;
+  font-family: 'Noto Sans Mono','Liberation Mono', Menlo, Monaco, Consolas, 'Courier New', monospace;
   font-size: 90%;
 }
 
