typo describtion-> description

--- a/de/css/dita-ot-doc.css
+++ b/de/css/dita-ot-doc.css
@@ -99,7 +99,7 @@ div.header hr {
 /* ↑ end-header-ref ↑ */
 
 caption,
-th, td.describtion {
+th, td.description {
   font-family: Bitter, 'Noto Serif', Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 10pt;
 }
