--- a/de/css/dita-ot-doc.css
+++ b/de/css/dita-ot-doc.css
@@ -40,7 +40,7 @@ body {
 }
 
 header {
-    background:#c8ab37;
+    background-image: linear-gradient(10deg, #f8f8f8 0%, #c8ab37 50%);
     padding:0;
     margin:0;
 }
@@ -64,7 +64,7 @@ td.td1 {
 td.td2 {
   width: 90%;
   font-size: 36pt; 
-  color: #eee; 
+  color: #555; 
   font-family: Bitter,'Noto Serif', Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif;
   box-shadow: none;
   text-align: left;
@@ -225,7 +225,8 @@ figcaption {
 
 .logo {
   width: auto;
-	height: auto;
+  height: auto;
+  padding: 10px;
 }
 /****************************************
 In-line elements
