--- a/en/css/dita-ot-doc.css
+++ b/en/css/dita-ot-doc.css
@@ -456,6 +456,10 @@ nav[role=toc] > ul > li ul {
 /****************************************
 Navigation DITA
 ****************************************/
+.nodeco {
+    color: #555;
+}
+
 
 .ulchildlink {
          margin-top: 0pt;    
