--- a/de/css/dita-ot-doc.css
+++ b/de/css/dita-ot-doc.css
@@ -457,7 +457,7 @@ nav[role=toc] > ul > li ul {
 Navigation DITA
 ****************************************/
 
-.nodeco {
+a.nodeco {
     color: #555;
 }
 
