--- a/en/css/dita-ot-doc.css
+++ b/en/css/dita-ot-doc.css
@@ -456,7 +456,7 @@ nav[role=toc] > ul > li ul {
 /****************************************
 Navigation DITA
 ****************************************/
-.nodeco {
+a.nodeco {
     color: #555;
 }
 
