--- a/en/css/dita-ot-doc.css
+++ b/en/css/dita-ot-doc.css
@@ -453,12 +453,49 @@ nav[role=toc] > ul > li ul {
 
 
 
+/* new dita-ot-version */
+
+
+/* ↓ nav-coderef ↓ */
+nav[role=navigation] {
+  float: left;
+  width: 300px;
+  background-image: linear-gradient(90deg, #f8f8f8 0%, #ffffff 50%);
+}
+
+nav[role=navigation] li.active > a {
+  font-weight: bold;
+  background-color: #e6e6e6;
+  padding: 3px;
+  box-sizing: border-box;
+  border-radius: 3px 3px 3px 3px;
+  line-height:1.6;	
+}
+
+/* ↑ end-nav-ref ↑ */
+
+nav[role=navigation] > ul {
+  margin-right: 2em;
+}
+
+nav[role=navigation] > ul > li ul {
+  margin-left: 1.2em;
+}
+
+
+
+
+
+
+
 /****************************************
 Navigation DITA
 ****************************************/
+
 a.nodeco {
     color: #555;
 }
+
 
 
 .ulchildlink {
