--- a/de/css/dita-ot-doc.css
+++ b/de/css/dita-ot-doc.css
@@ -601,7 +601,20 @@ table.table.guidelines>tbody>tr>td {
                               border: solid 1px !important;
                               font-family: Bitter, 'Noto Serif', Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif, JuniusVF;
                               font-size: 12pt;}
+
+table.guidelines {
+     float: left;
+     margin-right: 20px;
+     width: 70%
 }
+
+table.guidelines>caption {
+    
+    width: 100%;
+    
+
+}
+
 
 tr.color0{background-image: linear-gradient(10deg, #f8f8f8 0%, #c8ab37 50%);}
 tr.color1{background-image: linear-gradient(10deg, #f8f8f8 0%, #c8ab37 50%);}
