--- a/de/css/dita-ot-doc.css
+++ b/de/css/dita-ot-doc.css
@@ -224,7 +224,8 @@ Block elements
   background-color: #f5f5f5;
   border: 1px solid #ccc;
   border-radius: 4px;
-  padding: 6px;
+  padding: 10px;
+  width: fit-content;
 }
 
 /****************************************
