--- a/de/css/dita-ot-doc.css
+++ b/de/css/dita-ot-doc.css
@@ -40,9 +40,6 @@ body {
 }
 
 
-
-
-
 header {
     background-image: linear-gradient(10deg, #f8f8f8 0%, #c8ab37 50%);
     padding:0;
@@ -166,6 +163,17 @@ h1 .filepath {
 .topictitle1 {
   margin-top: 1em;
 }
+
+
+#ariaid-title2 {
+            font-style: italic;
+            font-weight: normal;
+            }
+
+#ariaid-title3 {
+            font-style: italic;
+            font-weight: normal;
+            }
 
 /****************************************
 Basic identation, padding, and margins
