--- a/de/css/dita-ot-doc.css
+++ b/de/css/dita-ot-doc.css
@@ -165,16 +165,6 @@ h1 .filepath {
 }
 
 
-#ariaid-title2 {
-            font-style: italic;
-            font-weight: normal;
-            }
-
-#ariaid-title3 {
-            font-style: italic;
-            font-weight: normal;
-            }
-
 /****************************************
 Basic identation, padding, and margins
 ****************************************/
@@ -640,6 +630,25 @@ tr.color12{background-image: linear-gradient(10deg, #f8f8f8 0%, #c8ab37 50%);}
 tr.color13{background-image: linear-gradient(10deg, #f8f8f8 0%, #c8ab37 50%);}
 tr.color14{background-image: linear-gradient(10deg, #f8f8f8 0%, #c8ab37 50%);}
 tr.color15{background-image: linear-gradient(10deg, #f8f8f8 0%, #c8ab37 50%);}
+
+
+
+/*****/
+FAQ
+/*****/
+
+.nested0 {
+    border-style: outset;
+    border-radius: 18px;
+    padding: 8px;
+}
+
+
+.title.topictitle2 {
+    font-style: italic;
+    font-weight: normal;
+}
+
 
 
 
