--- a/de/css/dita-ot-doc.css
+++ b/de/css/dita-ot-doc.css
@@ -637,7 +637,7 @@ tr.color15{background-image: linear-gradient(10deg, #f8f8f8 0%, #c8ab37 50%);}
 FAQ
 /*****/
 
-.nested0 {
+.topic.nested1 {
     border-style: outset;
     border-radius: 18px;
     padding: 8px;
