--- a/de/css/dita-ot-doc.css
+++ b/de/css/dita-ot-doc.css
@@ -637,9 +637,10 @@ tr.color15{background-image: linear-gradient(10deg, #f8f8f8 0%, #c8ab37 50%);}
 FAQ
 /*****/
 
-.topic.nested1 {
-    color: #b53333;
-    position: relative;
+article.topic.nested1 {
+    border-style: outset !important;
+    border-radius: 18px !important;
+    padding: 8px !important;
 }
 
 
