--- a/de/css/dita-ot-doc.css
+++ b/de/css/dita-ot-doc.css
@@ -633,9 +633,9 @@ tr.color15{background-image: linear-gradient(10deg, #f8f8f8 0%, #c8ab37 50%);}
 
 
 
-/*****/
+/*****
 FAQ
-/*****/
+*****/
 
 article.topic.nested1 {
     border-style: outset !important;
