--- a/de/css/dita-ot-doc.css
+++ b/de/css/dita-ot-doc.css
@@ -641,10 +641,11 @@ article.topic.nested1 {
     border-style: outset !important;
     border-radius: 18px !important;
     padding: 8px !important;
+    margin-bottom: 10px
 }
 
 
-.title.topictitle2 {
+.title.topictitle3 {
     font-style: italic;
     font-weight: normal;
 }
