--- a/en/css/dita-ot-doc.css
+++ b/en/css/dita-ot-doc.css
@@ -326,6 +326,10 @@ td {
   /*font-size: 1.2em;*/
 }
 
+td.entry {
+  font-family: JuniusVF, Bitter, 'Noto Serif', Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+
 th {
   background-color: #eee;
   padding: 1.2em 1.5em;
