add remember bell

--- a/de/css/dita-ot-doc.css
+++ b/de/css/dita-ot-doc.css
@@ -294,6 +294,11 @@ Notes
   font-weight: bold;
 }
 
+.note_remember:before {
+     content: '🔔';
+}
+
+
 /****************************************
 Tables
 ****************************************/
