--- a/de/css/dita-ot-doc.css
+++ b/de/css/dita-ot-doc.css
@@ -924,6 +924,17 @@ table,
   border-top: 1px solid var(--secondary-light);
 }
 
+.row {
+    --bs-gutter-x: 1.5rem;
+    --bs-gutter-y: 0;
+    flex-wrap: wrap;
+    margin-top: calc(-1 * var(--bs-gutter-y));
+    margin-right: calc(-.5 * var(--bs-gutter-x));
+    margin-left: calc(-.5 * var(--bs-gutter-x));
+}
+
+
+
 .stentry,
 .rowsep-1,
 thead,
