--- a/.github/dita-ot/theme.css
+++ b/.github/dita-ot/theme.css
@@ -7,6 +7,14 @@
 
 /* ↓  Additional custom overrides  ↓ */
 
+
+/* header */
+.bg-primary {
+    background-image: linear-gradient(10deg, #f8f8f8 0%, #c8ab37 50%)!important;
+}
+
+
+/* footer */
 footer {
   background-color: #e7f1ff;
   border-top: 1px solid rgba(0, 0, 0, 0.125);
@@ -33,4 +41,16 @@ footer {
 
 .custom-tooltip {
   --bs-tooltip-bg: var(--bs-primary);
+}
+
+/* table */
+
+.row {
+    --bs-gutter-x: 1.5rem;
+    --bs-gutter-y: 0;
+    /* display: flex; */
+    /* flex-wrap: wrap; */
+    margin-top: calc(-1 * var(--bs-gutter-y));
+    margin-right: calc(-.5 * var(--bs-gutter-x));
+    margin-left: calc(-.5 * var(--bs-gutter-x));
 }
