--- a/.github/dita-ot/theme.css
+++ b/.github/dita-ot/theme.css
@@ -7,6 +7,10 @@
 
 /* ↓  Additional custom overrides  ↓ */
 
+/* navigation */
+nav-link {
+    font-size: 9pt !important;
+}
 
 /* header */
 .bg-ocrd {
@@ -46,11 +50,5 @@ footer {
 /* table */
 
 .row {
-    --bs-gutter-x: 1.5rem;
-    --bs-gutter-y: 0;
-    /* display: flex; */
-    /* flex-wrap: wrap; */
-    margin-top: calc(-1 * var(--bs-gutter-y));
-    margin-right: calc(-.5 * var(--bs-gutter-x));
-    margin-left: calc(-.5 * var(--bs-gutter-x));
+    display: inherit !important;
 }
