--- a/.github/dita-ot/theme.css
+++ b/.github/dita-ot/theme.css
@@ -8,7 +8,7 @@
 /* ↓  Additional custom overrides  ↓ */
 
 /* navigation */
-nav-link {
+.nav-link {
     font-size: 9pt !important;
 }
 
@@ -19,11 +19,16 @@ nav-link {
 
 
 /* footer */
+
 footer {
-  background-color: #e7f1ff;
-  border-top: 1px solid rgba(0, 0, 0, 0.125);
-  margin-top: 3rem;
+    background-color: #c8ab373d;
+    border-top: 1px solid rgba(0, 0, 0, 0.125);
+    margin-top: 3rem;
 }
+
+
+
+
 
 /* Add Bootstrap’s own documentation example highlight */
 
@@ -52,3 +57,16 @@ footer {
 .row {
     display: inherit !important;
 }
+
+
+.row2 {
+    --bs-gutter-x: 1.5rem;
+    --bs-gutter-y: 0;
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: calc(-1 * var(--bs-gutter-y));
+    margin-right: calc(-.5 * var(--bs-gutter-x));
+    margin-left: calc(-.5 * var(--bs-gutter-x));
+}
+
+
