--- a/de/css/dita-ot-doc.css
+++ b/de/css/dita-ot-doc.css
@@ -1044,7 +1044,16 @@ Glossary
 
 /****************************************/
 
-/* custom footer */
+/* Custom */
+
+/* header */
+
+.bg-ocrd {
+    background-image: linear-gradient(10deg, #f8f8f8 0%, #c8ab37 50%);
+}
+
+
+/* footer */
 
 .row2 {
   display: flex;
