--- a/de/css/dita-ot-doc.css
+++ b/de/css/dita-ot-doc.css
@@ -1,5 +1,14 @@
 /* DITA Open Toolkit documentation style */
 
+/****************************************
+Import Prism
+****************************************/
+
+@import url("https://prismjs.com/themes/prism.css");
+
+@import url("main.css");
+
+
 /* Based on almond.css by Alvaro Montoro */
 
 /* stylelint-disable -- Ignore stylelint rules on almond.css */
