--- a/de/css/main.css
+++ b/de/css/main.css
@@ -3853,16 +3853,16 @@ input[type = "button"].btn-block {
 .navbar-light .navbar-text a:focus {
     color: rgba(0, 0, 0, 0.9)
 }
-.navbar-dark .navbar-brand {
+/*.navbar-dark .navbar-brand {
     color: #dce4f0
-}
+}*/
 .navbar-dark .navbar-brand:hover,
 .navbar-dark .navbar-brand:focus {
     color: #fff
 }
-.navbar-dark .navbar-nav .nav-link {
+/*.navbar-dark .navbar-nav .nav-link {
     color: #b9c8e0
-}
+}*/
 .navbar-dark .navbar-nav .nav-link:hover,
 .navbar-dark .navbar-nav .nav-link:focus {
     color: #fff
