--- a/de/css/dita-ot-doc.css
+++ b/de/css/dita-ot-doc.css
@@ -40,9 +40,6 @@ body {
 }
 
 
-
-
-
 header {
     background-image: linear-gradient(10deg, #f8f8f8 0%, #c8ab37 50%);
     padding:0;
@@ -68,7 +65,6 @@ td.td1 {
 
 td.td2 {
   width: 90%;
-  font-size: 36pt; 
   color: #555; 
   box-shadow: none;
   text-align: left;
@@ -77,13 +73,14 @@ td.td2 {
   text-indent: -4px;
   }
 
+td.td2 > span.title {
+    font-size: 36pt;
+}
 
 span.language {
     float:right;
     font-size:12pt;
 }
-
-
 
 div.header {
   font-size: 18pt;
@@ -123,9 +120,10 @@ pre,
 .filepath,
 .msgnum,
 .option,
-.parmname {
+.parmname 
+.codeph {
   color: #777;
-  font-family: 'Noto Sans Mono', 'Liberation Mono', Menlo, Monaco, Consolas, 'Courier New', monospace, JuniusVF;
+  font-family: 'Noto Sans Mono', 'Liberation Mono', Menlo, Monaco, Consolas, 'Courier New', monospace, JuniusVF !important;
   font-size: 90%;
 }
 
@@ -166,6 +164,7 @@ h1 .filepath {
 .topictitle1 {
   margin-top: 1em;
 }
+
 
 /****************************************
 Basic identation, padding, and margins
@@ -224,7 +223,8 @@ Block elements
   background-color: #f5f5f5;
   border: 1px solid #ccc;
   border-radius: 4px;
-  padding: 6px;
+  padding: 10px;
+  width: fit-content;
 }
 
 /****************************************
@@ -294,12 +294,19 @@ Notes
   font-weight: bold;
 }
 
+.note_remember:before {
+     content: '🔔';
+}
+
+
 /****************************************
 Tables
 ****************************************/
 .frame-all {
-    border: solid 1px;
-    max-width: 70% !important;
+  border: solid 0px !important;
+    /**max-width: 70% !important;**/
+    display: block;
+    overflow-x: auto;
 }
 
 
@@ -325,6 +332,11 @@ td {
   /*box-shadow: inset 1px 3px 5px -3px rgba(0, 0, 0, 0.5);*/
   font-family: Bitter, 'Noto Serif', Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif, JuniusVF;
   /*font-size: 1.2em;*/
+}
+
+td.entry:nth-of-type(2), td.entry:nth-of-type(3), td.entry:nth-of-type(4) {
+  font-family: JuniusVF, Bitter, 'Noto Serif', Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-size: 1.5em;
 }
 
 th {
@@ -453,6 +465,41 @@ nav[role=toc] > ul > li ul {
 
 
 
+/* new dita-ot-version */
+
+
+/* ↓ nav-coderef ↓ */
+nav[role=navigation].toc {
+  float: left;
+  width: 300px;
+  background-image: linear-gradient(90deg, #f8f8f8 0%, #ffffff 50%);
+}
+
+nav[role=navigation].toc li.active > a {
+  font-weight: bold;
+  background-color: #e6e6e6;
+  padding: 3px;
+  box-sizing: border-box;
+  border-radius: 3px 3px 3px 3px;
+  line-height:1.6;	
+}
+
+/* ↑ end-nav-ref ↑ */
+
+nav[role=navigation].toc > ul {
+  margin-right: 2em;
+}
+
+nav[role=navigation].toc > ul > li ul {
+  margin-left: 1.2em;
+}
+
+
+
+
+
+
+
 /****************************************
 Navigation DITA
 ****************************************/
@@ -541,7 +588,7 @@ footer {
     margin: 0;
     padding: 0.5em 1em;
     position: fixed;
-    right: 0;
+    /**right: 0;**/
     opacity: 0.5;
     border-radius: 20px;
     border-top-color: #777;
@@ -566,7 +613,19 @@ table.table.guidelines>tbody>tr>td {
                               border: solid 1px !important;
                               font-family: Bitter, 'Noto Serif', Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif, JuniusVF;
                               font-size: 12pt;}
+
+table.guidelines {
+     margin-right: 20px;
+     width: 70%
 }
+
+table.guidelines>caption {
+    
+    width: 100%;
+    
+
+}
+
 
 tr.color0{background-image: linear-gradient(10deg, #f8f8f8 0%, #c8ab37 50%);}
 tr.color1{background-image: linear-gradient(10deg, #f8f8f8 0%, #c8ab37 50%);}
@@ -584,6 +643,30 @@ tr.color12{background-image: linear-gradient(10deg, #f8f8f8 0%, #c8ab37 50%);}
 tr.color13{background-image: linear-gradient(10deg, #f8f8f8 0%, #c8ab37 50%);}
 tr.color14{background-image: linear-gradient(10deg, #f8f8f8 0%, #c8ab37 50%);}
 tr.color15{background-image: linear-gradient(10deg, #f8f8f8 0%, #c8ab37 50%);}
+
+
+
+/*****
+FAQ
+*****/
+
+article > article.topic.nested1:first-child {
+    margin-top: 10px;
+}
+
+
+
+article.topic.nested1 {
+    padding: 8px !important;
+    margin-bottom: 10px;
+}
+
+
+.title.topictitle3 {
+    font-style: italic;
+    font-weight: normal;
+}
+
 
 
 
@@ -649,7 +732,7 @@ td.gsc-result-info-container, td.gsc-orderby-container {
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
-    /* display: inline-block; */
+    display: inline !important; 
     vertical-align: middle;
     font-weight: bold;
 }
