--- a/de/css/dita-ot-doc.css
+++ b/de/css/dita-ot-doc.css
@@ -348,6 +348,8 @@ th {
 
 caption {
   text-align: left;
+  margin-top: 24px;
+  margin-bottom: 12px;
 }
 
 /****************************************
