--- a/.github/dita-ot/dita-ot-doc.css
+++ b/.github/dita-ot/dita-ot-doc.css
@@ -290,7 +290,10 @@ th {
 
 caption {
   text-align: left;
+  margin-top: 24px;
+  margin-bottom: 12px;
 }
+
 
 /****************************************
 ToolTips and Highlight Link
